[metadata]
name = xgb-sdof-rmt
version = 0.0.1
description = Next-generation non-linear and collapse prediction pre-trained XGBoost models for short to long period systems.
long_description = file: ReadMe.md
long_description_content_type = text/markdown
url = https://github.com/davitshahnazaryan3/SDOFPredictions
author = Davit Shahnazaryan
author_email = shahnazaryandavit1@gmail.com
license = GPL-3.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Bug Tracker = https://github.com/davitshahnazaryan3/SDOFPredictions/issues

[options]
packages = find:
install_requires =
    hyperopt~=0.2.7
    joblib~=1.2.0
    numpy~=1.23.3
    pandas~=1.5.0
    scikit-learn~=1.1.2
    scipy~=1.9.1
    xgboost~=1.6.2
python_requires = >=3.8

[options.packages.find]
exclude =
    tests*
    testing*
