[metadata]
name = xgb-rhomut
version = 1.2.1
description = Next-generation non-linear and collapse prediction pre-trained XGBoost models for short to long period systems.
long_description = file: ReadMe.md
long_description_content_type = text/markdown
url = https://github.com/davitshahnazaryan3/XGB-rhomut
author = Davit Shahnazaryan
author_email = shahnazaryandavit1@gmail.com
license = GPL-3.0
license_files = LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Bug Tracker = https://github.com/davitshahnazaryan3/XGB-rhomut/issues

[options]
packages = find:
# include_package_data = True
install_requires =
    joblib~=1.2.0
    numpy~=1.24.2
    pandas~=1.5.0
    scikit-learn~=1.1.2
    scipy~=1.10.1
    xgboost>=1.6,<=1.8
    pydantic~=1.10.4
python_requires = >=3.8

[options.packages.find]
# where=src
exclude =
    tests*
    testing*

# [options.package_data]
# * = *.sav

[options.extras_require]
dev =
    pytest~=7.4.0
    schema~=0.7.5
    flake8~=6.1.0
    
[flake8]
exclude = 
    tests/
    examples/
    **/__init__.py
max-line-length = 79
